tests/ui/bitxor.stderr
error[E0271]: type mismatch resolving `<std::array::IntoIter<({integer}, {integer}), 2> as IntoIterator>::Item == RangeInclusive<{integer}>`
 --> tests/ui/bitxor.rs:7:23
  |
7 |     let _c = a.bitxor(b);
  |                ------ ^ expected struct `RangeInclusive`, found tuple
  |                |
  |                required by a bound introduced by this call
  |
  = note: expected struct `RangeInclusive<{integer}>`
              found tuple `({integer}, {integer})`
note: required by a bound in `range_set_int::SortedDisjointIterator::bitxor`
 --> src/lib.rs
  |
  |         R: IntoIterator<Item = Self::Item>,
  |                         ^^^^^^^^^^^^^^^^^ required by this bound in `range_set_int::SortedDisjointIterator::bitxor`

error[E0277]: the trait bound `std::array::IntoIter<({integer}, {integer}), 2>: SortedDisjoint` is not satisfied
 --> tests/ui/bitxor.rs:7:23
  |
7 |     let _c = a.bitxor(b);
  |                ------ ^ the trait `SortedDisjoint` is not implemented for `std::array::IntoIter<({integer}, {integer}), 2>`
  |                |
  |                required by a bound introduced by this call
  |
  = help: the following other types implement trait `SortedDisjoint`:
            DynSortedDisjoint<'a, T>
            NotIter<T, I>
            Ranges<'_, T>
            itertools::tee::Tee<I>
            range_set_int::sorted_disjoint_iter::SortedDisjointIter<T, I>
note: required by a bound in `range_set_int::SortedDisjointIterator::bitxor`
 --> src/lib.rs
  |
  |         R::IntoIter: SortedDisjoint,
  |                      ^^^^^^^^^^^^^^ required by this bound in `range_set_int::SortedDisjointIterator::bitxor`

error[E0271]: expected `std::array::IntoIter<({integer}, {integer}), 2>` to be an iterator that yields `RangeInclusive<{integer}>`, but it yields `({integer}, {integer})`
 --> tests/ui/bitxor.rs:7:16
  |
7 |     let _c = a.bitxor(b);
  |                ^^^^^^ expected struct `RangeInclusive`, found tuple
  |
  = note: expected struct `RangeInclusive<{integer}>`
              found tuple `({integer}, {integer})`
note: required by a bound in `itertools::adaptors::MergeBy`
 --> $CARGO/itertools-0.10.5/src/adaptors/mod.rs
  |
  |           J: Iterator<Item = I::Item>
  |                       ^^^^^^^^^^^^^^ required by this bound in `itertools::adaptors::MergeBy`

error[E0271]: expected `std::array::IntoIter<({integer}, {integer}), 2>` to be an iterator that yields `RangeInclusive<_>`, but it yields `({integer}, {integer})`
 --> tests/ui/bitxor.rs:7:16
  |
7 |     let _c = a.bitxor(b);
  |                ^^^^^^ expected tuple, found struct `RangeInclusive`
  |
  = note: expected tuple `({integer}, {integer})`
            found struct `RangeInclusive<_>`
  = note: required for `itertools::tee::Tee<std::array::IntoIter<({integer}, {integer}), 2>>` to implement `SortedDisjoint`
  = note: required for `NotIter<{integer}, itertools::tee::Tee<std::array::IntoIter<({integer}, {integer}), 2>>>` to implement `Iterator`

error[E0271]: expected `std::array::IntoIter<({integer}, {integer}), 2>` to be an iterator that yields `RangeInclusive<_>`, but it yields `({integer}, {integer})`
 --> tests/ui/bitxor.rs:7:16
  |
7 |     let _c = a.bitxor(b);
  |                ^^^^^^ expected struct `RangeInclusive`, found tuple
  |
  = note: expected struct `RangeInclusive<_>`
              found tuple `({integer}, {integer})`
  = note: required for `itertools::tee::Tee<std::array::IntoIter<({integer}, {integer}), 2>>` to implement `range_set_int::sorted_disjoint_iter::SortedStarts`
  = note: 1 redundant requirement hidden
  = note: required for `itertools::adaptors::MergeBy<NotIter<{integer}, itertools::tee::Tee<Ranges<'_, {integer}>>>, ..., ...>` to implement `range_set_int::sorted_disjoint_iter::SortedStarts`
note: required by a bound in `range_set_int::sorted_disjoint_iter::SortedDisjointIter`
 --> src/sorted_disjoint_iter.rs
  |
  |     I: Iterator<Item = RangeInclusive<T>> + SortedStarts,
  |                                             ^^^^^^^^^^^^ required by this bound in `range_set_int::sorted_disjoint_iter::SortedDisjointIter`
